--- a/index2.html
+++ b/index2.html
@@ -17,7 +17,6 @@
             width: 900px; /*版心*/
             margin: auto;
             height: 70px;
-
         }
 
         .header {
@@ -61,24 +60,23 @@
         }
 
         .github {
-            height: 30px;
-            width: 30px;
+
             position: absolute;
-            left: 1310px;
-            top: 46px; /*强定位github icon*/
+            right: 10px;
+            top: 39px;
+            /*position: absolute;*/
+            /*left: 1310px;*/
+            /*top: 46px; !*强定位github icon*!*/
         }
 
         .search {
             float: left;
             height: 70px;
-            margin: 35px 120px;
-
-
+            margin: 50px 0 0 160px;
         }
 
         .search input {
             color: #ccc;
-
             height: 20px;
             float: left;
             width: 340px;
@@ -98,11 +96,37 @@
             position: relative;
             width: 100%;
             height: 526px;
-            background: url("banner-bg.jpg") ;
+            background: url("banner-bg.jpg");
             background-size: cover;
-
-
         }
+
+        .textbox {
+            float: right;
+            margin-top: 350px;
+            padding: 10px 10px 30px 10px;
+            width: 340px;
+            height: 90px;
+            /*background: linear-gradient(to bottom,rgba(255,255,255,0.7) 0%,rgba(255,255,255,0.5)75%,rgba(255,255,255,0)100%)*/
+            background: -moz-linear-gradient(top, rgba(255, 255, 255, 0.7) 0%, rgba(255, 255, 255, 0.5) 75%, rgba(255, 255, 255, 0) 100%); /* FF3.6+ */
+            background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(255, 255, 255, 0.7)), color-stop(75%, rgba(255, 255, 255, 0.5)), color-stop(100%, rgba(255, 255, 255, 0))); /* Chrome,Safari4+ */
+            background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.7) 0%, rgba(255, 255, 255, 0.5) 75%, rgba(255, 255, 255, 0) 100%); /* Chrome10+,Safari5.1+ */
+            background: -o-linear-gradient(top, rgba(255, 255, 255, 0.7) 0%, rgba(255, 255, 255, 0.5) 75%, rgba(255, 255, 255, 0) 100%); /* Opera 11.10+ */
+            background: -ms-linear-gradient(top, rgba(255, 255, 255, 0.7) 0%, rgba(255, 255, 255, 0.5) 75%, rgba(255, 255, 255, 0) 100%); /* IE10+ */
+            background: linear-gradient(to bottom, rgba(255, 255, 255, 0.7) 0%, rgba(255, 255, 255, 0.5) 75%, rgba(255, 255, 255, 0) 100%); /* W3C */
+            filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#b3ffffff', endColorstr='#00ffffff', GradientType=0); /* IE6-9 */
+        }
+
+        .textbox h1 {
+            font-size: 14px
+        }
+
+        .textbox p {
+            font-size: 12px;
+            line-height: 150%;
+        }
+        .content{
+            height: 480px;
+            background-color: rgb(238,238,238);}
     </style>
 </head>
 <body>
@@ -126,12 +150,23 @@
 
     </div>
     <div class="github">
-        <a href="github.com"><img src="icon-github.png"></a>
+        <a href="#"><img src="icon-github.png"></a>
     </div>
 </div>
 <div class="banner">
-
+    <div class="w">
+        <div class="textbox">
+            <h1>标题1</h1>
+            <p> 这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文 </p>
+        </div>
+    </div>
 </div>
+<div class="content">
+    <div class="w">
+    <div class="contentbox">
+    </div>
 
+    </div>
+</div>
 </body>
 </html>
