--- a/index2.html
+++ b/index2.html
@@ -14,7 +14,7 @@
         }
 
         .w {
-            width: 900px; /*版心*/
+            width: 980px; /*版心*/
             margin: auto;
             height: 70px;
         }
@@ -124,9 +124,35 @@
             font-size: 12px;
             line-height: 150%;
         }
-        .content{
+
+        .content {
             height: 480px;
-            background-color: rgb(238,238,238);}
+            background-color: rgb(238, 238, 238);
+        }
+
+        .contentbox {
+            margin: 10px 5px 0 0;
+            float: left;
+            height: 360px;
+            width: 320px;
+            background-color: pink;
+
+        }
+
+        .contentbox p {
+            margin: 15px 30px 25px 30px;
+            font-size: 12px;
+            line-height: 170%
+        }
+
+        .boximage {
+            margin: 10px 10px
+        }
+        .boximage img{
+            height: 180px;
+            width: 300px;}
+        .introduction {
+            height: 520px;}
     </style>
 </head>
 <body>
@@ -163,8 +189,22 @@
 </div>
 <div class="content">
     <div class="w">
-    <div class="contentbox">
+        <div class="contentbox">
+            <div class="boximage"><img src="box1.jpg" alt=""></div>
+            <p>&nbsp&nbsp正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文</p>
+        </div>
+        <div class="contentbox">
+<div class="boximage"><img src="box2.jpg"> </div>
+            <p>文章文章文章文章文章文章文章文章文章文章文章文章文章文章文章文章文章文章文章文章文章文章文章文章文章文章文章文章文章文章文章文章文章文章文章文章文章文章文章文章文章文章文章文章文章文章文章文章文章</p>
+        </div>
+        <div class="contentbox">
+            <div class="boximage"><img src="box3.png"> </div>
+            <p>内容内容内容内容内容内容内容内容内容内容</p>
+        </div>
     </div>
+</div>
+<div class="introduction">
+    <div class="w">
 
     </div>
 </div>
